[gd_scene load_steps=2 format=3 uid="uid://b42mp172120in"]

[ext_resource type="Script" path="res://Assets/Scripts/options_menu.gd" id="1_dt0kk"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_dt0kk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Audio" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "AUDIO"

[node name="Display" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DISPLAY"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "BACK"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Display" to="." method="_on_display_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
